# BELLA

./: .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rtd-environment.yml  .ruff.toml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements_fitter.txt  requirements_multilat.txt  tox.ini
.github/workflows/: ci.yml
Scripts/Multilaterate/: bayes_positioner.py  bayesian_tracker.py  bella_plotter.py  bella_processes.sh  bella_triangulation_2021_12_4_LE_BURST_A.py  density_models.py  plot_2021_12_04.py  positioner_mapping_parallel.py
Scripts/Type_III_Fitter/: dynspec.py  openmarsis.py  read_wi_wa_l2_60s_data.py  solo_quicklook.py  solo_quicklook_L3_data.py  stacked_dyn_spectra_2012_06_07_HIGHRES.py  typeIIIfitter.py
bella/multilaterate/: bayes_positioner.py  bayesian_tracker.py  bella_plotter.py  bella_processes.sh  bella_triangulation_2012_06_07.py  bella_triangulation_2012_06_07_SCATTER.py  bella_triangulation_2021_12_4_LE_BURST_A.py  density_models.py  plot_2021_12_04.py  positioner_mapping_parallel.py
bella/type_III_fitter/: dynspec.py  openmarsis.py  psp_quicklook.py  read_wi_wa_l2_60s_data.py  solo_quicklook.py  solo_quicklook_L3_data.py  solo_quicklook_solo_env.py  typeIIIfitter.py
docs/: conf.py  index.rst
examples/: bella_triangulation_2012_06_07.py  bella_triangulation_2012_06_07_SCATTER.py  plot_2021_12_04.py  stacked_dyn_spectra_2012_06_07_HIGHRES.py
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst  MIT.rst
