[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "solarbella"
description = "BayEsian LocaLisation Algorithm"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Luis Alberto Canizares", email = "canizares@cp.dias.ie" },
]
dependencies = [
  "Theano-PyMC==1.1.2",
  "astropy==5.2.2" ,
  "joblib==1.3.2",
  "solarmap==0.0.7",
  "termcolor==2.3.0",
  "pymc3==3.11.5"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "packaging",
]
[project.urls]
repository = "https://github.com/TCDSolar/BELLA"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["bella*"]
exclude = ["bella._dev*"]

[tool.setuptools_scm]
write_to = "bella/_version.py"
